Applied fix for stretched gallery images

--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -16,5 +16,5 @@
 }
 
 .gallery > ul > li > img {
-  width: 100%;
+  max-width: 100%;
 }
